syntax = "proto3";

package cart;

service CartService {
  rpc findOne (CartById) returns (Cart) {}
    rpc postOne (Cart) returns (Cart) {}

}

message CartById {
  int32 id = 1;
}

message Cart {
  int32 id = 1;
  float price = 2;
  string name = 3;
}
