syntax = "proto3";

package getCart;

service GetCartService {
  rpc findOne (GetCartById) returns (GetCart) {}
}

message GetCartById {
  int32 id = 1;
}

message GetCart {
  int32 id = 1;
  float price = 2;
  string name = 3;
}
