syntax = "proto3";

package postCart;

service PostCartService {
  rpc postOne (PostCartById) returns (PostCart) {}
}

message PostCartById {
  int32 id = 1;
}

message PostCart {
  int32 id = 1;
  float price = 2;
  string name = 3;
}
